# gputester

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.manifest  app.rc  build.bat  main.cpp  registry.cpp  registry.hpp
